(menhir
 (modules parser)
 (flags --exn-carries-state))

(rule
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))

(ocamllex lexer)

(library
 (name lox)
 (modules lexer parser parser_messages semant interpreter ast util)
 (libraries core)
 (preprocess
  (pps ppx_jane)))
